Resolves: tdf#163570 escape dictionary name for ui

so _ doesn't get seen as a ui code, keep the original and map it with
the itemid and avoid pitfalls of what happens to end up in the label
itself.

Change-Id: I25376adb797c1719ac52a59a4596f1c16cc665dd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182497
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 7ead9ac54676ed62530d1f9181a1a9227d18e6dd)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182521
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>